--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
             <label for="cpf">CPF:</label>
             <input type="text" id="cpf" name="cpf" required>
 
-            <label for="endereco">Endereço:</label>
-            <input type="text" id="endereco" name="endereco" required>
+            <label for="cep">CEP:</label>
+            <input type="text" id="cep" name="cep" required>
 
-            <button type="submit">Enviar</button>
+            <button type="submit" onclick="validarFormulario()">Enviar</button>
         </form>
     </div>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script src="/js/jquery.mask.min.js"></script>
-    <script src="/js/messages_pt_BR.min.js"></script>
-    <script src="/js/jquery.validate.min.js"></script>
+    <script src="./js/jquery.mask.min.js"></script>
+    <script src="./js/jquery.validate.min.js"></script>
+    <script src="./js/messages_pt_BR.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
 
